--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack -p --devtool source-map",
-    "start": "webpack-dev-server"
+    "build": "webpack -p --progress",
+    "start": "webpack-dev-server --progress --color --inline --env.dev",
+    "clean": "rimraf ./build"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-hot-loader": "^1.3.8",
     "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.1.0",
+    "node-sass": "^4.8.3",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
-    "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1"
+    "webpack": "3.11.0",
+    "webpack-dev-server": "2.11.1"
   },
   "dependencies": {
     "material-ui": "^0.20.0",
