--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "webpack-dev-server": "2.11.1"
   },
   "dependencies": {
-    "material-ui": "^0.20.0",
+    "material-ui": "^1.0.0-beta.38",
+    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2"
