레이아웃 작업중, 바벨 오류

--- a/src/containers/Full/package.json
+++ b/src/containers/Full/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Full",
+  "name": "GrFull",
   "version": "0.0.0",
   "private": true,
-  "main": "./Full.js"
+  "main": "./GrFull.js"
 }
