--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-hot-loader": "^1.3.8",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
