사이드메뉴에 이벤트 테스트 완료.

--- a/src/containers/Full/package.json
+++ b/src/containers/Full/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "GrFull",
+  "name": "Full",
   "version": "0.0.0",
   "private": true,
-  "main": "./GrFull.js"
+  "main": "./Full.js"
 }
