레이아웃 디자인 헤더와 사이드 완료, 본문 디자인 필요

--- a/src/containers/Breadcrumb/package.json
+++ b/src/containers/Breadcrumb/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Breadcrumb",
+  "name": "GrBreadcrumb",
   "version": "0.0.0",
   "private": true,
-  "main": "./Breadcrumb.js"
+  "main": "./GrBreadcrumb.js"
 }
