단말등록 컨텐트 작업중, 사이드 메뉴 푸터와 스크롤바 작업 필요

--- a/src/containers/Footer/package.json
+++ b/src/containers/Footer/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Footer",
+  "name": "GrFooter",
   "version": "0.0.0",
   "private": true,
-  "main": "./Footer.js"
+  "main": "./GrFooter.js"
 }
