--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-dev-server": "2.11.1"
   },
   "dependencies": {
+    "@material-ui/icons": "^1.0.0-beta.42",
     "axios": "^0.18.0",
     "material-ui": "^1.0.0-beta.39",
     "material-ui-icons": "^1.0.0-beta.36",
