--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@material-ui/icons": "^1.0.0-beta.42",
     "axios": "^0.18.0",
+    "glamor": "^2.20.40",
     "material-ui": "^1.0.0-beta.39",
     "material-ui-icons": "^1.0.0-beta.36",
     "qs": "^6.5.1",
