--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "qs": "^6.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-table": "^6.8.0"
+    "react-table": "^6.8.0",
+    "redux": "^4.0.0"
   }
 }
