--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-table": "^6.8.0",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-actions": "^2.4.0",
+    "redux-promise-middleware": "^5.1.1"
   }
 }
