--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-table": "^6.8.0",
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
-    "redux-promise-middleware": "^5.1.1"
+    "redux-promise-middleware": "^5.1.1",
+    "redux-thunk": "^2.3.0"
   }
 }
