--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^5.1.6",
     "css-hot-loader": "^1.3.8",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -42,7 +43,6 @@
     "react-table": "^6.8.0",
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
-    "redux-promise-middleware": "^5.1.1",
     "redux-thunk": "^2.3.0"
   }
 }
