클라이언트 콤프 파일 이름 변경, 정책 파일 이동, 파일 임포트 패스 작업중 - 에러나고 있음.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "NODE_PATH": "./src",
   "scripts": {
     "build": "webpack -p --progress",
     "start": "webpack-dev-server --progress --color --inline --env.dev",
