--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "rimraf ./build"
   },
   "devDependencies": {
+    "@babel/runtime": "7.0.0-beta.55",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
