--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^1.1.0",
     "axios": "^0.18.0",
+    "immutable": "^3.8.2",
     "moment": "^2.22.1",
     "qs": "^6.5.1",
     "react": "^16.2.0",
