--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "webpack-dev-server": "2.11.1"
   },
   "dependencies": {
-    "@material-ui/core": "^1.3.1",
-    "@material-ui/icons": "^1.1.0",
+    "@material-ui/core": "latest",
+    "@material-ui/icons": "latest",
     "axios": "^0.18.0",
     "immutable": "^3.8.2",
     "moment": "^2.22.1",
