--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-table": "^6.8.0",
+    "recharts": "^1.3.5",
     "redux": "^4.0.0",
     "redux-actions": "^2.4.0",
     "redux-thunk": "^2.3.0",
