--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@material-ui/core": "latest",
     "@material-ui/icons": "latest",
+    "@nivo/pie": "^0.51.0",
     "axios": "^0.18.0",
     "immutable": "^3.8.2",
     "moment": "^2.22.1",
