--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@material-ui/core": "^3.6.0",
     "@material-ui/icons": "latest",
+    "@nivo/bar": "^0.51.6",
     "@nivo/pie": "^0.51.0",
     "axios": "^0.18.0",
     "immutable": "^3.8.2",
