--- a/package.json
+++ b/package.json
@@ -37,12 +37,15 @@
     "@nivo/bar": "^0.51.6",
     "@nivo/pie": "^0.51.0",
     "axios": "^0.18.0",
+    "i18next": "^13.1.0",
+    "i18next-browser-languagedetector": "^2.2.4",
     "immutable": "^3.8.2",
     "moment": "^2.22.1",
     "qs": "^6.5.1",
     "react": "^16.2.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
+    "react-i18next": "^9.0.2",
     "react-material-ui-form-validator": "^2.0.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
