--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
   "dependencies": {
     "@material-ui/core": "^3.6.0",
     "@material-ui/icons": "latest",
-    "@nivo/bar": "^0.51.6",
-    "@nivo/pie": "^0.51.0",
     "axios": "^0.18.0",
+    "d3-hierarchy": "^1.1.8",
+    "d3-scale-chromatic": "^1.3.3",
     "i18next": "^13.1.0",
     "i18next-browser-languagedetector": "^2.2.4",
     "immutable": "^3.8.2",
@@ -46,7 +46,8 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-i18next": "^9.0.2",
-    "react-material-ui-form-validator": "^2.0.3",
+    "react-measure": "^2.2.3",
+    "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-table": "^6.8.0",
