--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "2.11.1"
   },
   "dependencies": {
+    "@date-io/moment": "^1.1.0",
     "@material-ui/core": "^3.6.0",
     "@material-ui/icons": "latest",
     "axios": "^0.18.0",
@@ -40,6 +41,7 @@
     "i18next": "^13.1.0",
     "i18next-browser-languagedetector": "^2.2.4",
     "immutable": "^3.8.2",
+    "material-ui-pickers": "^2.2.1",
     "moment": "^2.22.1",
     "qs": "^6.5.1",
     "react": "^16.2.0",
