--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@date-io/moment": "^1.1.0",
     "@material-ui/core": "^3.6.0",
     "@material-ui/icons": "latest",
+    "@tinymce/tinymce-react": "^3.0.1",
     "axios": "^0.18.0",
     "d3-hierarchy": "^1.1.8",
     "d3-scale-chromatic": "^1.3.3",
