--- a/package.json
+++ b/package.json
@@ -20,43 +20,45 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "cross-env": "^5.1.6",
-    "css-hot-loader": "^1.3.8",
+    "css-hot-loader": "^1.4.4",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.1.0",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.12.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "3.11.0",
     "webpack-dev-server": "2.11.1"
   },
   "dependencies": {
-    "@date-io/moment": "^1.1.0",
-    "@material-ui/core": "^3.6.0",
-    "@material-ui/icons": "latest",
-    "@tinymce/tinymce-react": "^3.0.1",
-    "axios": "^0.18.0",
+    "@date-io/moment": "^1.3.6",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "4.1.0",
+    "@tinymce/tinymce-react": "^3.2.0",
+    "axios": "^0.18.1",
+    "clsx": "^1.0.4",
     "d3-hierarchy": "^1.1.8",
     "d3-scale-chromatic": "^1.3.3",
     "i18next": "^13.1.0",
     "i18next-browser-languagedetector": "^2.2.4",
-    "immutable": "^3.8.2",
-    "material-ui-pickers": "^2.2.1",
+    "immutable": "3.8.2",
+    "material-ui-pickers": "^2.2.4",
     "moment": "^2.22.1",
-    "qs": "^6.5.1",
-    "react": "^16.2.0",
+    "qs": "^6.7.0",
+    "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.8.6",
     "react-i18next": "9.0.2",
-    "react-measure": "^2.2.3",
+    "react-measure": "^2.3.0",
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-table": "^6.8.0",
-    "recharts": "^1.3.5",
+    "react-table": "^6.10.0",
+    "react-virtualized": "^9.21.1",
+    "recharts": "^1.6.2",
     "redux": "^4.0.0",
-    "redux-actions": "^2.4.0",
+    "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0",
     "sha-256-js": "^1.0.3"
   }
