--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "moment": "^2.22.1",
     "qs": "^6.7.0",
     "react": "^16.8.6",
+    "react-app-polyfill": "^1.0.4",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
     "react-i18next": "9.0.2",
