--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0",
-    "sha-256-js": "^1.0.3"
+    "sha-256-js": "^1.0.3",
+    "file-saver": "2.0.2"
   }
 }
