[Bug 0001912] 사용자 최상위 조직(구름)의 조직만료일 변경시 즉시변경되오록 수정

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "NODE_PATH": "./src",
   "scripts": {
+    "webpack-dev-server": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "build": "webpack -p --progress",
-    "start": "webpack-dev-server --progress --color --inline --watch-content-base --env.dev",
+    "start": "npm run webpack-dev-server --progress --color --inline --watch-content-base --env.dev",
     "clean": "rimraf ./build"
   },
   "devDependencies": {
