--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "NODE_PATH": "./src",
   "scripts": {
+    "webpack-dev-server": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "build": "webpack -p --progress",
-    "start": "webpack-dev-server --progress --color --inline --watch-content-base --env.dev",
+    "start": "npm run webpack-dev-server --progress --color --inline --watch-content-base --env.dev",
     "clean": "rimraf ./build"
   },
   "devDependencies": {
@@ -49,6 +50,7 @@
     "react-app-polyfill": "^1.0.4",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
+    "react-file-reader": "^1.1.4",
     "react-i18next": "9.0.2",
     "react-measure": "^2.3.0",
     "react-motion": "^0.5.2",
@@ -60,6 +62,7 @@
     "redux": "^4.0.0",
     "redux-actions": "^2.6.5",
     "redux-thunk": "^2.3.0",
-    "sha-256-js": "^1.0.3"
+    "sha-256-js": "^1.0.3",
+    "file-saver": "2.0.2"
   }
 }
